implemeneted on dem primary candidate pages

--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -40,15 +41,14 @@
             </div>
         </div>
 
-        <br>
-        <br>
-
-        <div id="myModal" class="modal">
+          <dialog id="myModal" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>The quick summary for Candidate Capizola: Former Commissioner Capizola is a democrat with approximately one year of experience serving as a 
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">John P. Capizola, Jr.</h6>
+              <p>Former Commissioner Capizola is a democrat with approximately one year of experience serving as a 
                 commissioner. He seems to be running with former Sheriff Austino 'against' Perella and Smith. Without having any direct way to verify, we 
                 assume by surface level comparison that Austino and Capizola would be more center-left than Smith and Perella. Some quick points of note are that 
                 he seems to have a moderate stance on gun control, supports armed security in schools, and supported the middle mile broadband grant. He also has 
@@ -57,13 +57,11 @@
               </p>
             </div>
           
-          </div>
+          </dialog>
 
-          <br>
-          <br>
-    
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>JOHN P. CAPIZOLA Jr.</h2>
         <div class="running-for">
