--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -43,27 +44,26 @@
             </div>
         </div>
 
-        <br>
-        <br>
-
-        <div id="myModal" class="modal">
+          <dialog id="myModal" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Robert A. Austino</h6>
               <p>The quick summary for Candidate Austino: Former Sheriff Austino is a democrat who appears to be running with former commissioner Capizola 
-                'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
-                commissioner. There seems to be no easily accessible information regarding his platform or agenda, and Inform the Vote has not yet received a
-                response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
-                than Perella and Smith, but we cannot verify that at the moment. Scroll down for more in-depth information and sources.
+              'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
+              commissioner. There seems to be no easily accessible information regarding his platform or agenda, and Inform the Vote has not yet received a
+              response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
+              than Perella and Smith, but we cannot verify that at the moment. Scroll down for more in-depth information and sources.
               </p>
             </div>
           
-          </div>
-
+          </dialog>
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>ROBERT A. AUSTINO</h2>
         <div class="running-for">
