--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -39,9 +40,28 @@
                 </div>
             </div>
         </div>
+
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Joeigh S. Perella Jr.</h6>
+              <p>
+                Dr. Perella seems to be running with Candidate Smith 'against' former Sheriff Austino and former 
+                commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
+                Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
+                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. It is also 
+                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. Scroll down for 
+                more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>Joeigh S. Perella Jr.</h2>
         <div class="running-for">
