--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -40,30 +41,22 @@
             </div>
         </div>
 
-        <br>
-        <br>
-
-        <div id="myModal" class="modal">
+        <dialog id="myModal" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>The quick summary for Candidate Perella: Dr. Perella seems to be running with Candidate Smith 'against' former Sheriff Austino and former 
-                commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
-                Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
-                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. It is also 
-                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. Scroll down for 
-                more in-depth information and sources.
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">LaRae Smith</h6>
+              <p>
+                
               </p>
             </div>
-          
-          </div>
-
-          <br>
-          <br>
+        </dialog>
 
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
+    <button class="quick-summary-reopen">quick summary</button>
     <div class="title-info">
        <h2>LA RAE SMITH</h2>
         <div class="running-for">
