fixed styling issue with austino in ballot mobile view

--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -121,7 +121,7 @@
                         </div>   
                     </div>
                     <div class="a-row-2">
-                        <div class="last-name">
+                        <div class="last-name" id="austinoLN">
                             <a href="Candidates/austino.html">AUSTINO</a>
                         </div>
                     </div>
