--- a/child_pages/cc-elections/Candidates/serrano-glassner.html
+++ b/child_pages/cc-elections/Candidates/serrano-glassner.html
@@ -52,7 +52,7 @@
                 balance of business and political experience. She spent many years in the culinary field and then was a Director of Operations in the political field, 
                 then a regional advocate for small business in the US government, then 7 years with the Empire State Development Corporation, then 2 years as a member of 
                 city council, and then 6 years as mayor. She wants to tackle many issues such as reducing inflation, protecting social security, and medicare, increase 
-                fundinf for law enforcement to reduce crime, and more. Scroll down for more in-depth information and sources.
+                funding for law enforcement to reduce crime, and more. Scroll down for more in-depth information and sources.
               </p>
             </div>
           
