testing modal script fix on deans page

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -7,8 +7,10 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
+
     <body>
         <div class="menu-wrap">
             <input type="checkbox" autocomplete='off' class="toggler">
@@ -103,7 +105,7 @@
 
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-            Rodney led an effort in his community to help they youth gain free access to his local YMCA, where 7th-12th graders were
+            Rodney led an effort in his community to help the youth gain free access to his local YMCA, where 7th-12th graders were
             able to access an array of educational material to help prepare them for the future.
             </div>
             
