slight editing of deans page before sending it to him for review

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -88,10 +88,15 @@
                 
                 <ul>
                     <li>Campaign Trail Related Post <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0TgRBfniPRc2jmMX6UymTMRZwmkriEDsQsyK9AMEvWeWJ1VKAxPSWKBFNo3Hq6Qt2l" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                    <br>
                     <li>Donation Request <a href="https://www.gofundme.com/f/rodney-dean-running-for-new-jersey-congress-please-help-so-i?utm_medium=social&utm_source=facebook&utm_campaign=p_email+7500-amplify_campaign" target="_blank" rel="noopener noreferrer" class="website-link">GoFundMe</a></li>
-                    <li>Campaign Messaging Post with focus on being an consistent, authentic candidate and having the older generations taking responsibility for guiding the younger generations. <a href="https://www.facebook.com/rodney.dean.779/videos/856784679546344" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                    <br>
+                    <li>Campaign Messaging Post with focus on being a consistent, authentic candidate and having the older generations taking responsibility for guiding the younger generations. <a href="https://www.facebook.com/rodney.dean.779/videos/856784679546344" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                    <br>
                     <li>Campaign Messaging regarding opponent Congressman Van Drew <a href="https://www.facebook.com/rodney.dean.779/videos/406581155568123" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                    <br>
                     <li>Campaign Messaging regarding giving kids a hand-up rather than a hand-out <a href="https://www.facebook.com/rodney.dean.779/videos/404519642448301" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
+                    <br>
                     <li>When speaking on the phone with Inform the Vote, Rodney also mentioned wanting to address bullying in schools and
                         slumlord practices.    
                     </li>
