dean page modal debug

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -41,6 +41,24 @@
                 </div>
             </div>
         </div>
+
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Rodney A. Dean</h6>
+              <p>
+                Rodney A. Dean is running himself as a 'man of the people in the valley, not like the career politicians on the mountaintop.'
+                He prides himself on getting involved on a face-to-face basis with constituents and will have an open-door policy if elected.
+                He believes the older generation needs to make up for the lack of attention they gave in regards to teaching the younger generations.
+                He also strongly believes that politicians should stay consistent with who they are as opposed to the all too common turncoat practices
+                seen in government. Inform the Vote would also like to mention the prompt and consistent communication when we reached out to him
+                regarding his campaign. Scroll down for more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
     
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
@@ -63,22 +81,6 @@
         <div class="website">
             <a href="https://ballotpedia.org/Rodney_Dean" target="_blank" rel="noopener noreferrer" class="website-link">Ballotpedia</a>
         </div>
-
-        <div id="myModal" class="modal">
-
-            <!-- Modal content -->
-            <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>The quick summary for Candidate Dean: Rodney Dean is running himself as a 'man of the people in the valley, not like the career politicians on the mountaintop.'
-                He prides himself on getting involved on a face-to-face basis with constituents and will have an open-door policy if elected.
-                He believes the older generation needs to make up for the lack of attention they gave in regards to teaching the younger generations.
-                He also strongly believes that politicians should stay consistent with who they are as opposed to the all too common turncoat practices
-                seen in government. Inform the Vote would also like to mention the prompt and consistent communication when we reached out to him
-                regarding his campaign. Scroll down for more in-depth information and sources.
-              </p>
-            </div>
-          
-          </div>
 
         <br>
         <br>
