some small edits and modal pop up added to home page

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -117,10 +117,14 @@
 
             <h4 class="sub-heading">experience</h4>
             <div class="experience">
-                <p>Sheriff Robert A. Austino brings over 30 years of law enforcement experience to the Sheriff’s Office.  He was hired by the Vineland Police Department in April 1973.  He worked his way up the ranks of the Vineland Police Department to the rank of lieutenant.  Sheriff Austino retired from the Vineland Police Department in July of 2003.</p>
+                <p>Sheriff Robert A. Austino brings over 30 years of law enforcement experience to the Sheriff’s Office.  He was hired by the Vineland Police Department in April 
+                    1973.  He worked his way up the ranks of the Vineland Police Department to the rank of lieutenant.  Sheriff Austino retired from the Vineland Police 
+                    Department in July of 2003.</p>
                 <p>He was elected Sheriff of Cumberland County and took office January 1, 2009
                 Sheriff Austino attended Bridgeton High School, Cumberland County College and Glassboro State College.</p>
-                <p>Sheriff Austino currently is a member of the International Association of Chief of Police, National Sheriff’s Association, New Jersey Sheriff’s Association, Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association.></p>
+                <p>Sheriff Austino currently is a member of the International Association of Chief of Police, National Sheriff’s Association, New Jersey Sheriff’s Association, 
+                    Cumberland County Human Relations Commission and Cumberland County Youth Services Advisory Council.  He is also an advisor for the Cumberland County VoTech 
+                    Center.  He is past president of the Fraternal Order of Police, Cumberland Lodge #8 and president of the Vineland Superior Officers Association.</p>
                  
             </div>
 
