--- a/child_pages/cc-elections/Candidates/capizola.html
+++ b/child_pages/cc-elections/Candidates/capizola.html
@@ -52,7 +52,7 @@
                 commissioner. He seems to be running with former Sheriff Austino 'against' Perella and Smith. Without having any direct way to verify, we 
                 assume by surface level comparison that Austino and Capizola would be more center-left than Smith and Perella. Some quick points of note are that 
                 he seems to have a moderate stance on gun control, supports armed security in schools, and supported the middle mile broadband grant. He also has 
-                spoken against school vouchers, hoping to make local politics less partisan, and supporting better transparency and communication between the 
+                spoken against school vouchers, he hopes to make local politics less partisan, and he supports better transparency and communication between the 
                 government and constituents. Scroll down for more in-depth information and sources.
               </p>
             </div>
