--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -49,7 +49,11 @@
               <h4 class="quick-sum">quick summary</h4>
               <h6 class="page-title">LaRae Smith</h6>
               <p>
-                
+                Ms. Smith seems to be running with Candidate Perella 'against' former Sheriff Austino and former 
+                commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
+                Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
+                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. Scroll down for 
+                more in-depth information and sources.
               </p>
             </div>
         </dialog>
