added modal summaries to republican primary candidates

--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -40,23 +41,21 @@
             </div>
         </div>
     
-        <br>
-        <br>
-
-        <div id="myModal" class="modal">
+        <dialog id="myModal" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>The quick summary for Candidate Murphy: Candidate Murphy is a big advocate for military strength to help overall 
-                American prosperity. From increasing the military budget to be able to fund two wars simultaneously, to securing the 
-                border with military resources, and increasing military presence in the South China Sea. He advocates for a 12% flat tax,
-                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs.
-                 Scroll down for more in-depth information and sources.
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Justin Murphy</h6>
+              <p>
+                Candidate Murphy is a big advocate for military strength to help overall American prosperity. From increasing the military budget to be able to fund two wars 
+                simultaneously, to securing the border with military resources, and increasing military presence in the South China Sea. He advocates for a 12% flat tax, 
+                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs. Scroll down for more in-depth information and 
+                sources.
               </p>
             </div>
-          
-          </div>
+        </dialog>
 
           <br>
           <br>
