--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             Click on the primary election you're interested in and navigate the interactive primary ballots to learn more about the candidates. Don't forget to use the back 
             button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top left of the screen to help broader
             navigation. Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this site, take a closer look at our home page. 
-            Have fun!
+            Click the red x at the top right of pop-up boxes like this to proceed through the site. Have fun!
           </p>
         </div>
     </dialog>
