--- a/child_pages/cc-elections/Candidates/serrano-glassner.html
+++ b/child_pages/cc-elections/Candidates/serrano-glassner.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -40,23 +41,23 @@
             </div>
         </div>
 
-        <br>
-        <br>
-
-        <div id="myModal" class="modal">
+        
+        <dialog id="myModal" class="modal">
 
             <!-- Modal content -->
             <div class="modal-content">
-              <span class="close">&times;</span>
-              <p>The quick summary for Candidate Serrano-Glassner: Candidate Serrano-Glassner is the current mayor of Mendham and she seems to have a very good 
-                balance of business and political experience. She spent many years in the culinary field and then was a Director of Operations in the political field, 
-                then a regional advocate for small business in the US government, then 7 years with the Empire State Development Corporation, then 2 years as a member of 
-                city council, and then 6 years as mayor. She wants to tackle many issues such as reducing inflation, protecting social security, and medicare, increase 
-                funding for law enforcement to reduce crime, and more. Scroll down for more in-depth information and sources.
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Christine Serrano-Glassner</h6>
+              <p>
+                Candidate Serrano-Glassner is the current mayor of Mendham and she seems to have a very good balance of business and political experience. She spent many years 
+                in the culinary field and then was a Director of Operations in the political field, then a regional advocate for small business in the US government, then 7 years
+                with the Empire State Development Corporation, then 2 years as a member of city council, and then 6 years as mayor. She wants to tackle many issues such as 
+                reducing inflation, protecting social security, and medicare, increase funding for law enforcement to reduce crime, and more. Scroll down for more in-depth 
+                information and sources.
               </p>
             </div>
-          
-          </div>
+        </dialog>
 
           <br>
           <br>
