changed instructions at end of modals

--- a/child_pages/cc-elections/Candidates/austino.html
+++ b/child_pages/cc-elections/Candidates/austino.html
@@ -55,7 +55,8 @@
               'against' candidates Smith and Perella. The sheriff has lengthy experience working in government as sheriff, but no direct experience as a 
               commissioner. There seems to be no easily accessible information regarding his platform or agenda, and Inform the Vote has not yet received a
               response from him regarding campaign related information. A surface level guess would be that Austino and Capizola would be more center-left 
-              than Perella and Smith, but we cannot verify that at the moment. Scroll down for more in-depth information and sources.
+              than Perella and Smith, but we cannot verify that at the moment. Click the red x at the top of this box and then scroll down down for more in-depth 
+              information and sources.
               </p>
             </div>
           
