--- a/child_pages/cc-elections/Candidates/bashaw.html
+++ b/child_pages/cc-elections/Candidates/bashaw.html
@@ -54,7 +54,7 @@
                 a lot of experience as a successful businessman in real estate and hospitality. He seems to have decided to jump directly into politics in 
                 response to the government's handling of COVID and how it affected small businesses. He wants to secure the border while revamping legal 
                 immigration policy to encourage legal immigration. While Inform the Vote has only briefly spoken to Bashaw, he has been hitting the campaign 
-                trail hard, which is well documented on Twitter/X. Scroll down for more in-depth information and sources.
+                trail hard, which is well documented on Twitter/X. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
