--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -55,7 +55,7 @@
                 He believes the older generation needs to make up for the lack of attention they gave in regards to teaching the younger generations.
                 He also strongly believes that politicians should stay consistent with who they are as opposed to the all too common turncoat practices
                 seen in government. Inform the Vote would also like to mention the prompt and consistent communication when we reached out to him
-                regarding his campaign. Scroll down for more in-depth information and sources.
+                regarding his campaign. Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
