--- a/child_pages/cc-elections/Candidates/murphy.html
+++ b/child_pages/cc-elections/Candidates/murphy.html
@@ -51,8 +51,8 @@
               <p>
                 Candidate Murphy is a big advocate for military strength to help overall American prosperity. From increasing the military budget to be able to fund two wars 
                 simultaneously, to securing the border with military resources, and increasing military presence in the South China Sea. He advocates for a 12% flat tax, 
-                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs. Scroll down for more in-depth information and 
-                sources.
+                balancing the budget through a constitutional amendment, pro-life policy, and other common conservative beliefs. Click the red x at the top of this box and then 
+                scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
