--- a/child_pages/cc-elections/Candidates/perella.html
+++ b/child_pages/cc-elections/Candidates/perella.html
@@ -53,8 +53,8 @@
                 commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
                 Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
                 economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. It is also 
-                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. Scroll down for 
-                more in-depth information and sources.
+                worth noting that Dr. Perella has been one of the better candidates in regards to regular communication with Inform the Vote. 
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
