--- a/child_pages/cc-elections/Candidates/smith.html
+++ b/child_pages/cc-elections/Candidates/smith.html
@@ -52,8 +52,8 @@
                 Ms. Smith seems to be running with Candidate Perella 'against' former Sheriff Austino and former 
                 commissioner Capizola.  Perella and Smith seem to be further left than Austino and Capizola, but we don't yet have a direct way to verify that.
                 Perella and Smith have a much more detailed list of policy proposals and agenda items than Austino and Capizola, including investing in 
-                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. Scroll down for 
-                more in-depth information and sources.
+                economic opportunities, environmental sustainability, county infrastructure, mental health, affordable housing, and social justice. 
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
