--- a/child_pages/cc-elections/Candidates/vallorosi.html
+++ b/child_pages/cc-elections/Candidates/vallorosi.html
@@ -53,7 +53,7 @@
                     very pure application of the constitution and applying full transparency of government business through a regularly updated, single source 
                     website. He enumerates many ideas throughout his website, including simplifying the tax code, balancing the budged, reducing the size of 
                     government, removing donor influence from politics, and much more. Vallorosi was also very prompt with communicating with Inform the Vote.
-                    Scroll down down for more in-depth information and sources.
+                    Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
