--- a/child_pages/cc-elections/Candidates/harshaw.html
+++ b/child_pages/cc-elections/Candidates/harshaw.html
@@ -54,7 +54,7 @@
                     his specific policy ideas, but also how he plans on achieving those policy ideas. His policy proposals range from rebuilding manufacturing, 
                     agriculture, and overall infrastructure, to investing in childhood education, re-entering the space race, bringing accountability to government
                     corruption, reforming the tax code, and more. Harshaw was also very prompt and thorough while communicating with Inform the Vote. 
-                    Scroll down down for more in-depth information and sources.
+                    Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
               </p>
             </div>
         </dialog>
