--- a/index.html
+++ b/index.html
@@ -52,26 +52,39 @@
           <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">Welcome to Inform the Vote!</h4>
           <h6 class="page-title">A Brief Introduction Of The Site And How To Use It</h6>
+
           <p>
             With the shutting down of newspapers all across the country, information regarding elections is scattered all over the internet and oftentimes appears biased because
             it is coming from the candidates themselves and their parties. We've scoured the information landscape and consolidated it on this hub, with a focus on New Jersey,
             and more specifically Cumberland County. This year Cumberland County has 5 primary elections:
+         </p>
+
+         <ul>
             <br>
-            <strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong>
             <br>
-            <strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong>
+            <li><strong><a href="/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html">Cumberland County Democrat Primary For 2 Commissioner Seats</a></strong></li>
             <br>
-            <strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong>
             <br>
-            <strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong>
+            <li><strong><a href="/child_pages/cc-elections/us_repubprimary_senate.html">Republican Primary for 1 US Senate Seat</a></strong></li>
             <br>
-            <strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong>
             <br>
+            <li><strong><a href="/child_pages/cc-elections/us_demprimary_senate.html">Democrat Primary for 1 US Senate Seat</a></strong></li>
+            <br>
+            <br>
+            <li><strong><a href="/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html">Democrat Primary for 1 US House of Representatives Seat</a></strong></li>
+            <br>
+            <br>
+            <li><strong><a href="/child_pages/cc-elections/us_president_demprimary.html">Democrat Primary for US President</a></strong></li>
+            <br>
+          </ul>
+
+          <p>
             Click on the primary election you're interested in and navigate the interactive primary ballots to learn more about the candidates. Don't forget to use the back 
             button on your computer or phone to get back to the ballot, and there's also the red, three-lined 'hamburger' menu at the top left of the screen to help broader
             navigation. Finally, if you're hungry for more in-depth knowledge about our local politics and the methods we used on this site, take a closer look at our home page. 
             Click the red x at the top right of pop-up boxes like this to proceed through the site. Have fun!
           </p>
+          
         </div>
     </dialog>
     <div class="cta-landing">
