modal summary of GOP US Senate ballot

--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -54,8 +54,8 @@
             are running two incumbents, and the democrats appear to have two separate two person teams: Former Sheriff Austino and former Commissioner Capizola
             'vs' Dr. Perella and Ms. La Rae Smith. The two republican incumbents inherently have experience, so it is the opinion of Inform the Vote that there 
             ought to be some kind of discussion as to why challengers would be significantly better or different. Capizola and Austino have more direct experience 
-            than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. Scroll down and 
-            click on the candidates names for more in-depth information.
+            than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. 
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
