added instructions to end of GOP senate modal

--- a/child_pages/cc-elections/us_repubprimary_senate.html
+++ b/child_pages/cc-elections/us_repubprimary_senate.html
@@ -71,6 +71,8 @@
             Peter Vallorosi appears to be switching to an independent candidate, but as of 4/29/2024 he is still on the posted registry as a republican. He is 
             very focused on a pure application of the constitution and high transparency of the government on a single webiste. He also has many other common 
             conservative beliefs.
+            <br>
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
       
