summaries added to dem primary for house of reps ballot and individual candidate pages

--- a/child_pages/cc-elections/Candidates/alexander.html
+++ b/child_pages/cc-elections/Candidates/alexander.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -39,7 +40,24 @@
                 </div>
             </div>
         </div>
-    
+        
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Tim Alexander</h6>
+              <p>
+                Candidate Alexander is a former detective captain and major trials prosecutor in Philadelphia who was inspired to join the 
+                force because he was racially profiled in his youth, so he wanted to bring systemic change to the force. He has many left 
+                leaning items on his agenda including being pro-choice, addressing the gender wage gap, passing the Equality Act, supporting 
+                climate change policy, and more.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
+
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
