--- a/child_pages/cc-elections/Candidates/rush.html
+++ b/child_pages/cc-elections/Candidates/rush.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -39,7 +40,26 @@
                 </div>
             </div>
         </div>
-    
+        
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Carolyn Rush</h6>
+              <p>
+                Candidate Rush has an extensive experience engineering and management which she says she will use to help break down the 
+                problems in Washington and help politicians begin to collaborate more effectively. She has lots of detailed policy positions 
+                and proposals on her site for topics such as climate change, women's reproductive rights, LGBTQ rights, and much more. Inform 
+                the vote would like to highlight that Rush points to specific differences in policy approach in comparison to that of the 
+                incumbent Van Drew, such as voting differently on HR-1280 "The George Floyd Justice in Policing Act", HR-1 "The For the People 
+                Act", and HR-5 "The Equality Act". 
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
+
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
