--- a/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html
+++ b/child_pages/cc-elections/us_houseofrepresentatives_demprimary.html
@@ -10,7 +10,8 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=REM:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,600;1,700&family=Roboto+Mono&display=swap" rel="stylesheet">
-    <title>Inform The Vote</title>
+<script src="../../../app.js" async></script>    
+<title>Inform The Vote</title>
 </head>
 <body>
     <div class="menu-wrap">
@@ -42,6 +43,45 @@
             </div>
         </div>
     </div>
+
+    <dialog id="myModal" class="modal">
+
+        <!-- Modal content -->
+        <div class="modal-content">
+          <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+          <h4 class="quick-sum">quick summary</h4>
+          <h6 class="page-title">Democrat Primary for House of Representatives</h6>
+          <p>
+            This year 1 seat is open for election in the US House of Representatives. The republicans are running incumbent Jeff 
+            Van Drew while the Democrats have 4 candidates running in the primary. 
+            <br>
+            <br>
+            Candidate Alexander is a former detective captain and major trials prosecutor in Philadelphia who was inspired to join the 
+            force because he was racially profiled in his youth, so he wanted to bring systemic change to the force. 
+                <br>
+                <br>
+                Rodney A. Dean is running himself as a 'man of the people in the valley, not like the career politicians on the 
+                mountaintop.' He prides himself on getting involved on a face-to-face basis with constituents and will have an 
+                open-door policy if elected. 
+                <br>
+                <br>
+                Candidate Rush has an extensive experience engineering and management which she says she will use to help break down the 
+                problems in Washington and help politicians begin to collaborate more effectively. She has lots of detailed policy positions 
+                and proposals on her site for topics such as climate change, women's reproductive rights, LGBTQ rights, and much more. 
+                <br>
+                <br>
+                Candidate Salerno is a successful businessman with degrees in engineering and law. One of his main campaign messages seems 
+                to be an response to Congressman Van Drew appearing to be a sell-out to former President Trump and other politicians in Washington,
+                instead of keeping the constituents of South Jersey as the top priority. 
+                <br>
+                <br>
+            Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+            <br>
+            <br>
+
+          </p>
+        </div>
+    </dialog>
 
     <img src="../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
     <div id="sample-ballot">
