--- a/child_pages/cc-elections/Candidates/salerno.html
+++ b/child_pages/cc-elections/Candidates/salerno.html
@@ -7,6 +7,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Calistoga&family=Roboto+Mono&display=swap" rel="stylesheet">
+        <script src="../../../app.js" async></script>
         <title>Inform The Vote</title>
     </head>
     <body>
@@ -39,7 +40,24 @@
                 </div>
             </div>
         </div>
-    
+        
+        <dialog id="myModal" class="modal">
+
+            <!-- Modal content -->
+            <div class="modal-content">
+              <img src="../../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
+              <h4 class="quick-sum">quick summary</h4>
+              <h6 class="page-title">Joe Salerno</h6>
+              <p>
+                Candidate Salerno is a successful businessman with degrees in engineering and law. One of his main campaign messages seems 
+                to be an response to Congressman Van Drew appearing to be a sell-out to former President Trump and other politicians in Washington,
+                instead of keeping the constituents of South Jersey as the top priority. He has a bunch of agenda items such as protecting 
+                reproductive rights, instituting tax credits to bring manufacturing back, protecting social security, and more.
+                Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
+              </p>
+            </div>
+        </dialog>
+
         <img src="../../../assets/lighthouse.jpg" alt="cumberland county symbol" id="jumbotronjawn">
 <div class="container">
     <div class="title-info">
