update to dean page

--- a/child_pages/cc-elections/Candidates/dean.html
+++ b/child_pages/cc-elections/Candidates/dean.html
@@ -89,6 +89,46 @@
             <div class="agenda-thesis">
                 
                 <ul>
+
+                    <li>Rodney is a big advocate for starting boxing gyms throughout the community as he believes there are 
+                        numerous benefits that can follow from solid boxing programs:
+                        <br>
+                        1. Boxing gyms help keep kids off the streets so they will get into less trouble.
+                        <br>
+                        2. Boxing teaches valuable life lessons such as hard work, discipline, and respect for others.
+                        <br>
+                        3. Boxing lessons can help reduce gun violence as learning basic self defense gives people an option to 
+                        protect themselves rather than defaulting to reaching for a gun.
+                        <br>
+                        4. Self defense through boxing can also give kids who are being bullied a chance to defend themselves when 
+                        necessary.
+                        <br>
+                        5. Being involved in boxing gyms can lead to career pathways later in life as opposed to being influenced to 
+                        sell drugs on the streets.
+                    </li>
+
+                    <li>He wants to ensure veterans receive mental health care once or twice a month to manage PTSD.</li>
+                    <br>
+
+                    <li>He wants to help protect Medicaid and Medicare for the elderly.</li>
+                    <br>
+
+                    <li>He wants to ensure senior citizens have ample funding and accomodations for special needs like wheelchair ramps.</li>
+                    <br>
+
+                    <li>He wants to hold regular community talent shows to help foster community spirit.</li>
+                    <br>
+
+                    <li>He wants to ensure big oil companies are not harming the environment so basic needs like water and air are clean.</li>
+                    <br>
+
+                    <li>He wants to help give the youth the things they need, such as food and sneakers, to ensure they thrive in the 
+                        community.</li>
+                        <br>
+
+                        <li>He believes on focusing on one issue at a time rather over-promising and under-delivering.</li>
+                        <br>
+
                     <li>Campaign Trail Related Post <a href="https://www.facebook.com/dr.perellaforcumberland/posts/pfbid0TgRBfniPRc2jmMX6UymTMRZwmkriEDsQsyK9AMEvWeWJ1VKAxPSWKBFNo3Hq6Qt2l" target="_blank" rel="noopener noreferrer" class="website-link">Facebook</a></li>
                     <br>
                     <li>Donation Request <a href="https://www.gofundme.com/f/rodney-dean-running-for-new-jersey-congress-please-help-so-i?utm_medium=social&utm_source=facebook&utm_campaign=p_email+7500-amplify_campaign" target="_blank" rel="noopener noreferrer" class="website-link">GoFundMe</a></li>
