--- a/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
+++ b/child_pages/cc-elections/cc_demprimary_county_commissioner_2024.html
@@ -50,11 +50,13 @@
           <img src="../../assets/x-icon-33.png" alt="an x icon - click to close the quick summary modal" class="close">
           <h4 class="quick-sum">quick summary</h4>
           <h6 class="page-title">Democrat Primary for County Commissioner</h6>
-          <p>This year 2 seats are open on the County Commissioner board. The reppublicans
-            are running two incumbents, and the democrats appear to have two separate two person teams: Former Sheriff Austino and former Commissioner Capizola
-            'vs' Dr. Perella and Ms. La Rae Smith. The two republican incumbents inherently have experience, so it is the opinion of Inform the Vote that there 
-            ought to be some kind of discussion as to why challengers would be significantly better or different. Capizola and Austino have more direct experience 
-            than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. 
+          <p>This year 2 seats are open on the County Commissioner board. The republicans
+            are running two incumbents, and the democrats appear to have one endorsed team on their <a href="https://cumberlandnjdems.com/elections/our-democratic-candidates/">website</a>
+             : Former Sheriff Austino and former Commissioner Capizola. There is another team, Dr. Perella and Ms. La Rae Smith, who have their own 
+             <a href="https://perellaandsmithforcumberland.com/">website</a>.
+            The two republican incumbents inherently have experience, so it is the opinion of Inform the Vote that there 
+            ought to be some kind of discussion as to why challengers would be significantly better or different than the incumbents. Capizola and Austino have more direct 
+            experience than Smith and Perella, but Smith and Perella seem to have a much more transparent agenda and have been better about communicating with us. 
             Click the red x at the top of this box and then scroll down down for more in-depth information and sources.
           </p>
         </div>
